Change WEBAPP_URL to new production address
Updated WEBAPP_URL to point to the new production environment.

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ WITHDRAWALS_PENDING_CHANNEL=@Sallypagos
    WITHDRAWALS_SUCCESS_CHANNEL=@PagoSally
 
 # ============== WEB APPLICATION ==============
-WEBAPP_URL=https://les23.pythonanywhere.com
+WEBAPP_URL=mibot-production.up.railway.app
 SECRET_KEY=31354923
 
 # ============== ADMIN ==============
